--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
                 <section class="main__about about">
                     <div class="about__container container">
                         <div class="about__img-block">
-                            <img src="img/tree.jpg" alt="Green tree" class="about__img">
+                            <img src="img/tree.jpg" alt="Green" class="about__img">
                         </div>
                         <div class="about__text-block">
                             <p class="about__uptitle uptitle">About Us</p>
